--- a/style.css
+++ b/style.css
@@ -30,9 +30,8 @@
   background-color: #7ae2e2;
   border: 3px solid #447e7e;
   box-shadow: 10px 10px 10px #888888;
-
-
 }
+
 
 #player-one-score {
 	border: 3px solid #0F3D0F;
@@ -68,7 +67,6 @@
 	font-size: 120px;
 	margin-left: 20px;
 	font-family: 'Pacifico', cursive;
-
 
 }
 /****** End Player One ******/
@@ -138,109 +136,8 @@
   display: inline-block;
   margin-left: 90px;
 }
-/*
-#box1 {
-	width: 190px;
-	height: 190px;
-	border: 3px solid black;
-	border-radius: 40px;
-	display: inline-block;
-	background-color: yellow;
-	margin-left: 25px;
-	box-shadow: 10px 10px 5px #888888;
 
 
-}
-
-
-#box2 {
-	width: 190px;
-	height: 190px;
-	border: 3px solid black;
-	border-radius: 40px;
-	display: inline-block;
-	background-color: yellow;
-	box-shadow: 10px 10px 5px #888888;
-
-}
-
-#box3 {
-	width: 190px;
-	height: 190px;
-	border: 3px solid black;
-	border-radius: 40px;
-	display: inline-block;
-	background-color: yellow;
-	box-shadow: 10px 10px 5px #888888;
-
-}
-
-#box4 {
-	width: 190px;
-	height: 190px;
-	border: 3px solid black;
-	border-radius: 40px;
-	display: inline-block;
-	background-color: yellow;
-	margin-left: 25px;
-	box-shadow: 10px 10px 5px #888888;
-
-}
-
-#box5 {
-	width: 190px;
-	height: 190px;
-	border: 3px solid black;
-	border-radius: 40px;
-	display: inline-block;
-	background-color: yellow;
-	box-shadow: 10px 10px 5px #888888;
-
-}
-
-#box6 {
-	width: 190px;
-	height: 190px;
-	border: 3px solid black;
-	border-radius: 40px;
-	display: inline-block;
-	background-color: yellow;
-	box-shadow: 10px 10px 5px #888888;
-
-}
-
-#box7 {
-	width: 190px;
-	height: 190px;
-	border: 3px solid black;
-	border-radius: 40px;
-	display: inline-block;
-	background-color: yellow;
-	margin-left: 25px;
-	box-shadow: 10px 10px 5px #888888;
-
-}
-
-#box8 {
-	width: 190px;
-	height: 190px;
-	border: 3px solid black;
-	border-radius: 40px;
-	display: inline-block;
-	background-color: yellow;
-	box-shadow: 10px 10px 5px #888888;
-
-}
-
-#box9 {
-	width: 190px;
-	height: 190px;
-	border: 3px solid black;
-	border-radius: 40px;
-	display: inline-block;
-	background-color: yellow;
-	box-shadow: 10px 10px 5px #888888;
-}*/
 
 .box {
 	width: 190px;
@@ -250,14 +147,35 @@
 	display: inline-block;
 	background-color: yellow;
 	box-shadow: 10px 10px 5px #888888;
-	margin-left: 
+           transform: skew(0deg);*/
+           transition: 2s all;
 }
 
-#picked {
+.clicked{
+    background-color: green;
+}
+
+
+.box:hover{
+
+   
+
+
+}
+
+#chosen{
 	font-size: 100px;
 	font-family: 'Pacifico', cursive;
 	text-align: center;
 	padding-bottom: 60px;
+}
+
+
+
+#cursor {
+    font-family: 'Pacifico', cursive;
+    font-size: 100px;
+    text-align: center;
 }
 
 
