--- a/style.css
+++ b/style.css
@@ -140,15 +140,16 @@
 
 
 .box {
-	width: 190px;
-	height: 190px;
-	border: 3px solid black;
+	width: 185px;
+	height: 185px;
+	border: 5px solid black;
 	border-radius: 40px;
 	display: inline-block;
 	background-color: yellow;
 	box-shadow: 10px 10px 5px #888888;
            transform: skew(0deg);*/
            transition: 2s all;
+      margin-right: 2px;
 }
 
 .clicked_player_one{
