--- a/style.css
+++ b/style.css
@@ -1,11 +1,4 @@
-/*#header {
-	border: 1px solid blue;
-	border-radius: 40px;
-	width: 500px;
-	margin-left: 270px;
-	height: 40px;
-	padding-top: 10px;
-}*/
+
 
 
 #container {
@@ -21,7 +14,7 @@
 /****** Player One ******/
 #player-one-side {
   /*border: 1px solid green;*/
-  height: 570px;
+  height: 100%;
   display: inline-block;
   width: 210px;
   margin-left: 0px;
@@ -41,7 +34,7 @@
 	margin-top: 20px;
 	margin-left: 20px;
 	background-color: #32cd32;
-
+     opacity:0.5;
 }
 
 #player-one-name {
@@ -74,7 +67,7 @@
 /****** Player Two ******/
 #player-two-side {
   /*border: 1px solid red;*/
-  height: 570px;
+  height: 100%;
   display: inline-block;
   width: 210px;
   margin-left: 10px;
@@ -93,7 +86,7 @@
 	margin-left: 20px;
 	margin-top: 20px;
 	background-color: red;
-
+     opacity:0.5;
 
 }
 
@@ -140,40 +133,34 @@
 
 
 .box {
-	width: 185px;
-	height: 185px;
+	width: 190px;
+	height: 190px;
 	border: 5px solid black;
 	border-radius: 40px;
 	display: inline-block;
 	background-color: yellow;
 	box-shadow: 10px 10px 5px #888888;
-           transform: skew(0deg);*/
-           transition: 2s all;
+      transition: 2s all;
       margin-right: 2px;
+     
 }
+/*
+.box:target{
+    
+}*/
 
 .clicked_player_one{
     background-color: red;
+    transform: rotateY(180deg);
+    box-shadow: 3px 3px 3px 3px #888888;
 }
 .clicked_player_two{
     background-color: green;
+    transform: rotateY(180deg);
+    box-shadow: 3px 3px 3px 3px #888888;
+    
 }
 
-/*#chosen{
-	font-size: 100px;
-	font-family: 'Pacifico', cursive;
-	text-align: center;
-	padding-bottom: 60px;
-}
-
-#cursor {
-    font-family: 'Pacifico', cursive;
-    font-size: 100px;
-    text-align: center;
-}*/
-
-
-/****End Gameboard*****/
 
 
 
