--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
 }
 
 #player-one-name {
-  border: 2px dotted green;
+  border: 2px dashed green;
   margin-top: 5px;
   margin-left: 0px;
   border-radius: 20px;
@@ -50,10 +50,11 @@
   font-size: 37px;
   font-family: 'Pacifico', cursive;
   vertical-align: text-top;
+
 }
 
 #player-one-move {
-	border: 3px dotted green;
+	border: 3px dashed green;
 	width: 150px;
 	height: 150px;
 	text-align: center;
@@ -91,7 +92,7 @@
 }
 
 #player-two-name {
-  border: 2px dotted red;
+  border: 2px dashed red;
   margin-top: 5px;
   margin-left: 0px;
   border-radius: 20px;
@@ -106,7 +107,7 @@
 }
 
 #player-two-move {
-	border: 3px dotted red;
+	border: 3px dashed red;
 	width: 150px;
 	height: 150px;
 	text-align: center;
